version/dev/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/Enums/MeshDisplayStyle.rst.txt
.. vale off



:class:`MeshDisplayStyle`
=========================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.Enums.MeshDisplayStyle

   Bases: :py:obj:`enum.Enum`


   
   Specifies the MeshDisplayStyle.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: MeshDisplayStyle

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AspectRatio`
            - 
          * - :py:attr:`~AspectRatioEXD`
            - 
          * - :py:attr:`~CharacteristicLength`
            - 
          * - :py:attr:`~CharacteristicLengthLSD`
            - 
          * - :py:attr:`~ElementQuality`
            - 
          * - :py:attr:`~Hydrodynamics`
            - 
          * - :py:attr:`~JacobianRatio`
            - 
          * - :py:attr:`~JacobianRatioCornerNodes`
            - 
          * - :py:attr:`~JacobianRatioGaussPoints`
            - 
          * - :py:attr:`~KnockdownFactor`
            - 
          * - :py:attr:`~MaxEdgeLength`
            - 
          * - :py:attr:`~MaxQuadAngle`
            - 
          * - :py:attr:`~MaxTriAngle`
            - 
          * - :py:attr:`~MaximumCornerAngle`
            - 
          * - :py:attr:`~MinEdgeLength`
            - 
          * - :py:attr:`~MinQuadAngle`
            - 
          * - :py:attr:`~MinTriAngle`
            - 
          * - :py:attr:`~OrthogonalQuality`
            - 
          * - :py:attr:`~ParallelDeviation`
            - 
          * - :py:attr:`~ShellThickness`
            - 
          * - :py:attr:`~Skewness`
            - 
          * - :py:attr:`~TetCollapse`
            - 
          * - :py:attr:`~WarpingAngle`
            - 
          * - :py:attr:`~WarpingFactor`
            - 








Attribute detail
----------------
.. py:attribute:: AspectRatio
   :value: 2


.. py:attribute:: AspectRatioEXD
   :value: 21


.. py:attribute:: CharacteristicLength
   :value: 10


.. py:attribute:: CharacteristicLengthLSD
   :value: 24


.. py:attribute:: ElementQuality
   :value: 1


.. py:attribute:: Hydrodynamics
   :value: 13


.. py:attribute:: JacobianRatio
   :value: 3


.. py:attribute:: JacobianRatioCornerNodes
   :value: 11


.. py:attribute:: JacobianRatioGaussPoints
   :value: 12


.. py:attribute:: KnockdownFactor
   :value: 14


.. py:attribute:: MaxEdgeLength
   :value: 23


.. py:attribute:: MaxQuadAngle
   :value: 18


.. py:attribute:: MaxTriAngle
   :value: 16


.. py:attribute:: MaximumCornerAngle
   :value: 6


.. py:attribute:: MinEdgeLength
   :value: 22


.. py:attribute:: MinQuadAngle
   :value: 17


.. py:attribute:: MinTriAngle
   :value: 15


.. py:attribute:: OrthogonalQuality
   :value: 8


.. py:attribute:: ParallelDeviation
   :value: 5


.. py:attribute:: ShellThickness
   :value: 9


.. py:attribute:: Skewness
   :value: 7


.. py:attribute:: TetCollapse
   :value: 20


.. py:attribute:: WarpingAngle
   :value: 19


.. py:attribute:: WarpingFactor
   :value: 4






.. vale on